# wobot

./: Cargo.toml
migrations/: 20260318173237_longer_autoreplies.sql
src/: config.rs  handler.rs  main.rs
src/commands/images/: animal.rs
