[package]
name = "wobot"
version = "1.1.0"
edition = "2024"
publish = false
rust-version = "1.88"

[features]
default = ["activity"]
activity = []

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
deser-hjson = "2.2.5"
deunicode = "1.6.2"
ics = { version = "0.5.8", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = "0.26.1"
itertools = "0.14.0"
nonempty = { version = "0.12.0", features = ["serialize"] }
mini-moka = "0.10.3"
parse_duration = "2.1.1"
percent-encoding = "2.3.2"
poise = "0.6.1"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.228"
songbird = { version = "0.5.0", features = ["builtin-queue", "rustls"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "vorbis"] }
sqlx = { version = "0.8.5", default-features = false, features = ["runtime-tokio", "tls-rustls", "chrono", "postgres", "bigdecimal", "migrate", "macros"] }
stitchy-core = "0.1.6"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uwuify = { version = "0.2.2", default-features = false }

# until https://github.com/serenity-rs/songbird/pull/291 is merged
[patch.crates-io]
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "davey" }
